--- a/Documents/e-kayseri/src/app/homepage/homepage.component.html
+++ b/Documents/e-kayseri/src/app/homepage/homepage.component.html
@@ -25,13 +25,18 @@
                     monetization_on
                 </mat-icon>
             </a>
+            <a [routerLink]="['/my-debt']" (click)='selectedTab = 4'>
+                <mat-icon id="logout-button" matTooltip="Keluar" matTooltipPosition="right" [ngStyle]="{'color':(selectedTab === 4) ? '#FF7070' : '#9ba1ca'}" aria-hidden="false"
+                    aria-label="Example home icon">
+                    logout
+                </mat-icon>
+            </a>
             <a (click)='onSignout()'>
                 <mat-icon id="logout-button" matTooltip="Keluar" matTooltipPosition="right" [ngStyle]="{'color':(selectedTab === 4) ? '#FF7070' : '#9ba1ca'}" aria-hidden="false"
                     aria-label="Example home icon">
                     logout
                 </mat-icon>
             </a>
-
         </div>
     </div>
     <div class="main-content">
