--- a/Documents/e-kayseri/src/app/auth-page/register-profile-process/register-profile-process.component.scss
+++ b/Documents/e-kayseri/src/app/auth-page/register-profile-process/register-profile-process.component.scss
@@ -79,5 +79,23 @@ section {
   .button-container {
     display: flex;
     justify-content: flex-end;
+    font-weight: bold;
+    
+    .btn {
+      height: fit-content;
+    }
+
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: 10px;
+        color: $dark-blue;
+        cursor: pointer;
+
+        &:hover {
+          color: $pink;
+        }
+    }
   }
 }
