--- a/Documents/e-kayseri/src/styles.scss
+++ b/Documents/e-kayseri/src/styles.scss
@@ -62,6 +62,8 @@ body {
   color: white;
   cursor: pointer;
   transition: all 0.5s;
+  font-size: 0.9em;
+  
 
   border-radius: 10px;
   background: linear-gradient(145deg, #ff7878, #e66565);
@@ -83,6 +85,21 @@ body {
 
   &:disabled {
     background: $dark-grey;
+    color: white;
+  }
+}
+
+.cancel-btn {
+  width: 112px;
+  height: 32px;
+  margin: 10px auto;
+  border-radius: 10px;
+  border: 2px solid $pink;
+  background-color: transparent;
+  cursor: pointer;
+
+  &:active {
+    background-color: $pink;
     color: white;
   }
 }
@@ -120,4 +137,9 @@ body {
 .dropdown-content li > a,
 .dropdown-content li > span {
   color: $pink !important;
+}
+
+.basic-dialog-container .mat-dialog-container {
+  background-color: $secondary-background;
+  border-radius: 20px;
 }
