--- a/Documents/e-kayseri/src/app/homepage/admin-panel/admin-panel.component.html
+++ b/Documents/e-kayseri/src/app/homepage/admin-panel/admin-panel.component.html
@@ -10,7 +10,7 @@
             </div>
             <div class="card" [routerLink]="['./uang-kas']" routerLinkActive="active-card" >
                 <div>
-                    <mat-icon>money</mat-icon>
+                    <mat-icon class="material-icons-round">money</mat-icon>
                 </div>
                 <p>Uang Kas</p>
             </div>
