--- a/Documents/e-kayseri/src/app/homepage/dashboard/dashboard.component.html
+++ b/Documents/e-kayseri/src/app/homepage/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
             <div class="cards" *ngIf="(events$ | async)">
                 <div class="card" *ngFor="let event of events$ | async">
                     <p class="title">{{event?.eventTitle}}</p>
-                    <p class='date'>{{event?.date * 1000 | date}}</p>
+                    <p class='date'>{{event?.date | date}}</p>
                     <p class='description'>{{event.eventDescription}}</p>
                     <div><button [routerLink]="['/event-detail']" [queryParams]="{eventId: event?.eventId, date: event?.date}" class="btn">Detil</button></div>
                     <p class="quota">{{event?.participants?.length}} people joined</p>
