--- a/Documents/e-kayseri/src/app/homepage/admin-panel/admin-panel.component.scss
+++ b/Documents/e-kayseri/src/app/homepage/admin-panel/admin-panel.component.scss
@@ -11,11 +11,7 @@
         align-items: center;
         
         .active-card {
-
-            .mat-icon {
-                color: $pink !important;
-            }
-            
+            color: $pink !important;
         }
 
         .card {
@@ -24,9 +20,10 @@
             text-align: center;
             min-height: 10rem;
             width: 70%;
-            color: $dark-blue;
+            color: $purple-grey;
             font-size: 18px;
             cursor: pointer;
+            font-weight: bold;
             
             .mat-icon {
                 font-size: 72px;
