--- a/Documents/e-kayseri/src/app/homepage/event-detail/event-detail.component.scss
+++ b/Documents/e-kayseri/src/app/homepage/event-detail/event-detail.component.scss
@@ -8,6 +8,7 @@ section {
       display: flex;
       justify-content: center;
       align-items: center;
+      margin-bottom: 3rem;
   }
   
   #navigation-arrow {
