--- a/Documents/e-kayseri/src/styles.scss
+++ b/Documents/e-kayseri/src/styles.scss
@@ -49,7 +49,8 @@ body {
   flex-direction: column;
   padding: 1rem;
   background: #f4f4fc;
-  box-shadow: 20px 20px 60px #cfcfd6, -20px -20px 60px #ffffff;
+  box-shadow:  9px 9px 10px #c3c3ca,
+             -9px -9px 10px #ffffff;
   border-radius: 20px;
   color: $dark-blue;
 }
@@ -142,4 +143,16 @@ body {
 .basic-dialog-container .mat-dialog-container {
   background-color: $secondary-background;
   border-radius: 20px;
+}
+
+.empty-result {
+  text-align: center;
+  color: $purple-grey;
+  width: 100%;
+  height: 100%;
+
+  .mat-icon {
+    font-size: 90px;
+    margin-right: 3rem;
+  }
 }
