--- a/src/app/auth-page/register-profile-process/register-profile-process.component.html
+++ b/src/app/auth-page/register-profile-process/register-profile-process.component.html
@@ -72,10 +72,7 @@
                     <mat-form-field appearance="legacy" class="select-input">
                         <mat-select formControlName="educationLevel">
                             <mat-option>None</mat-option>
-                            <mat-option value="high_school">High School</mat-option>
-                            <mat-option value="undergraduate">Undergraduate</mat-option>
-                            <mat-option value="master">Master</mat-option>
-                            <mat-option value="phd">PhD</mat-option>
+                            <mat-option *ngFor="let level of EDUCATION_LEVEL" [value]="level">{{level}}</mat-option>
                         </mat-select>
                     </mat-form-field>
                     <label>Level Pendidikan</label>
@@ -90,7 +87,12 @@
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input type="text" formControlName="faculty" class="validate" name="first_name" required>
+                    <mat-form-field appearance="legacy" class="select-input">
+                        <mat-select formControlName="faculty">
+                            <mat-option>None</mat-option>
+                            <mat-option *ngFor="let faculty of FACULTIES" [value]="faculty">{{faculty}}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
                     <label class="active">Fakultas</label>
                     <span class="helper-text" data-error="Field ini wajib di isi"></span>
                 </div>
@@ -100,9 +102,7 @@
                     <mat-form-field appearance="legacy" class="select-input">
                         <mat-select formControlName="turkishProvince">
                             <mat-option>None</mat-option>
-                            <mat-option value="kayseri">Kayseri</mat-option>
-                            <mat-option value="sivas">Kayseri 2</mat-option>
-                            <mat-option value="kayseri_3">Kayseri 3</mat-option>
+                            <mat-option *ngFor="let province of TURKISH_PROVINCES" [value]="province">{{province}}</mat-option>
                         </mat-select>
                     </mat-form-field>
                     <label>Provinsi</label>
@@ -111,8 +111,7 @@
                     <mat-form-field appearance="legacy" class="select-input">
                         <mat-select formControlName="jalur">
                             <mat-option>None</mat-option>
-                            <mat-option value="mandiri">Mandiri</mat-option>
-                            <mat-option value="ytb">YTB</mat-option>
+                            <mat-option *ngFor="let jalur of JALUR" [value]="jalur">{{jalur}}</mat-option>
                         </mat-select>
                     </mat-form-field>
                     <label>Jalur</label>
@@ -129,9 +128,7 @@
                     <mat-form-field appearance="legacy" class="select-input">
                         <mat-select formControlName="indonesianProvince">
                             <mat-option>None</mat-option>
-                            <mat-option value="jakarta">Jakarta</mat-option>
-                            <mat-option value="surabaya">Surabaya</mat-option>
-                            <mat-option value="tongseng">Tongseng</mat-option>
+                            <mat-option *ngFor="let province of INDONESIAN_PROVINCES" [value]="province">{{province}}</mat-option>
                         </mat-select>
                     </mat-form-field>
                     <label>Provinsi Asal (Indonesia)</label>
